hphp/hack/test/typecheck/constraints/tapply_is_typedef.php.exp
File "tapply_is_typedef.php", line 8, characters 18-32:
Some type constraint(s) here are violated (Typing[4110])
File "tapply_is_typedef.php", line 3, characters 22-22:
'T' is a constrained type
File "tapply_is_typedef.php", line 3, characters 27-29:
This is a num (int/float)
File "tapply_is_typedef.php", line 8, characters 34-38:
It is incompatible with a mixed value
File "tapply_is_typedef.php", line 5, characters 38-38:
  via this generic T
